feat: changed reference to high-fi desktop photo

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			
 		<div class="text lowfi">
 			<br>
-			<img src="Desktop_H.jpg" alt="high-fidelity wireframing for desktop" width=30% >
+			<img src="desktop_H.jpg" alt="high-fidelity wireframing for desktop" width=30% >
 				<ol> <b>Notes on Redesign:</b>
 					<br>
 					<li style="padding-bottom:.5em">The main information, application information, and important dates boxes utilize flex to allow the sections to reorder when the screen is made smaller.</li>
